--- a/requirements.txt
+++ b/requirements.txt
@@ -43,6 +43,7 @@ murmurhash==1.0.2
 nbconvert==5.6.1
 nbformat==5.0.7
 networkx==2.4
+nltk==3.3
 notebook==6.0.3
 numpy==1.19.0
 packaging==20.4
@@ -73,6 +74,7 @@ six==1.15.0
 sklearn==0.0
 smart-open==2.0.0
 spacy==2.3.0
+spacy-wordnet==0.0.4
 srsly==1.0.2
 stop-words==2018.7.23
 terminado==0.8.3
