--- a/requirements.txt
+++ b/requirements.txt
@@ -27,6 +27,7 @@ importlib-metadata==1.7.0
 ipykernel==5.3.0
 ipython==7.16.1
 ipython-genutils==0.2.0
+ipyturtle==0.2.4
 ipywidgets==7.5.1
 jedi==0.17.1
 Jinja2==2.11.2
@@ -53,6 +54,7 @@ parso==0.7.0
 pexpect==4.8.0
 pickleshare==0.7.5
 plac==1.1.3
+plotly==4.8.2
 preshed==3.0.2
 prometheus-client==0.8.0
 prompt-toolkit==3.0.5
@@ -61,11 +63,13 @@ Pygments==2.6.1
 pyparsing==2.4.7
 pyrsistent==0.16.0
 python-dateutil==2.8.1
+python-igraph==0.8.2
 pytz==2020.1
 pyzmq==19.0.1
 qtconsole==4.7.5
 QtPy==1.9.0
 requests==2.24.0
+retrying==1.3.3
 s3transfer==0.3.3
 scikit-learn==0.22.1
 scipy==1.5.0
@@ -79,6 +83,7 @@ srsly==1.0.2
 stop-words==2018.7.23
 terminado==0.8.3
 testpath==0.4.4
+texttable==1.6.2
 thinc==7.4.1
 threadpoolctl==2.1.0
 tornado==6.0.4
@@ -89,4 +94,5 @@ wasabi==0.7.0
 wcwidth==0.2.5
 webencodings==0.5.1
 widgetsnbextension==3.5.1
+xlrd==1.2.0
 zipp==3.1.0
