--- a/requirements.txt
+++ b/requirements.txt
@@ -44,7 +44,7 @@ murmurhash==1.0.2
 nbconvert==5.6.1
 nbformat==5.0.7
 networkx==2.4
-nltk==3.4.5
+nltk==3.3
 notebook==6.0.3
 numpy==1.19.0
 packaging==20.4
@@ -58,6 +58,7 @@ plotly==4.8.2
 preshed==3.0.2
 prometheus-client==0.8.0
 prompt-toolkit==3.0.5
+psutil==5.7.2
 ptyprocess==0.6.0
 Pygments==2.6.1
 pyparsing==2.4.7
